# kcwiulb

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
docs/: covariance_test.md  folder_structure.md  installation.md  interactive_viewer.md  post_ads_denoising.md  repository_structure.md  step10_source_mask.md  step11_ads.md  step1_master_filelists.md  step2_wcs.md  step3_crop.md  step4_cr_iter1.md  step4_cr_iter2.md  step4_sky_blue_iter1.md  step4_sky_blue_iter2.md  step4_sky_red_iter1.md  step4_sky_red_iter2.md  step4_sky_red_iter3.md  step4b2_sky_blue_iter2.md  step5_coadd_blue.md  step5_coadd_red.md  step5_sky_blue_iter2.md  step6_coadd_wcs.md  step7_variance_normalization.md  step8_spectral_window.md  step9_continuum_subtraction.md  user_data_directory_structure.md
scripts/: generate_master_filelists.py  generate_sky_map_blue_iter1.py  generate_sky_map_blue_iter2.py  generate_sky_map_red_iter12.py  generate_sky_map_red_iter3.py  run_ads.py  run_coadd_blue.py  run_coadd_red.py  run_continuum_subtraction.py  run_covariance_test.py  run_cr_iter1.py  run_cr_iter2.py  run_crop_batch.py  run_interactive_viewer.py  run_post_ads_denoising.py  run_sky_blue_iter2.py  run_sky_blue_iter2_one.py  run_sky_red_iter1.py  run_sky_red_iter1_one.py  run_sky_red_iter2.py  run_sky_red_iter2_one.py  run_sky_red_iter3.py  run_sky_red_iter3_one.py  run_sky_subtraction_iter1.py  run_sky_subtraction_iter1_one.py  run_source_mask.py  run_spectral_window.py  run_variance_normalization.py  run_wcs_coadd.py  run_wcs_one.py
src/kcwiulb/: cli.py  crop.py  (+1 more)
tests/: test_basic.py
(+27 files in other folders)
