[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kcwiulb"
version = "0.1.0"
description = "Ultra-low surface brightness IFU emission mapping tools for KCWI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Zeren Lin"}
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "astropy>=6.0",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "tqdm>=4.66"
]

[project.scripts]
kcwiulb = "kcwiulb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]